# raceteam_softwareHW_2023

./: CMakeLists.txt  README.md  package.xml
bag_files/rosbag2_2023_08_22-09_00_33/: metadata.yaml  rosbag2_2023_08_22-09_00_33_0.db3
src/: motor_node.cpp  pedal_stroke_publisher.cpp
